cmake_minimum_required(VERSION 2.8)


IF(USE_PYTHON AND USE_KOKKOS)
  IF (DEFINED NUMPY_INC AND DEFINED PYTHON_EXECUTABLE AND DEFINED PYTHON_LIBRARY AND DEFINED PYTHON_INCLUDE_DIR)
 
    EXECUTE_PROCESS(
          COMMAND "./run_swig.sh" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    )

    ADD_LIBRARY(GMLS_PYTHON SHARED gmls_wrap.cxx)
    SET_TARGET_PROPERTIES( GMLS_PYTHON
      PROPERTIES
      ARCHIVE_OUTPUT_DIRECTORY "."
      LIBRARY_OUTPUT_DIRECTORY "."
      OUTPUT_NAME "_gmls.so"
      PREFIX "" 
      SUFFIX "" 
    )

    SET(GMLS_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/..")
    TARGET_INCLUDE_DIRECTORIES(GMLS_PYTHON PUBLIC ${GMLS_INCLUDE_DIRS})
    TARGET_INCLUDE_DIRECTORIES(GMLS_PYTHON PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    TARGET_INCLUDE_DIRECTORIES(GMLS_PYTHON PUBLIC ${Trilinos_INCLUDE_DIRS})
    TARGET_INCLUDE_DIRECTORIES(GMLS_PYTHON PUBLIC ${PYTHON_INCLUDE_DIR})
    TARGET_INCLUDE_DIRECTORIES(GMLS_PYTHON PUBLIC ${NUMPY_INC})


    TARGET_LINK_LIBRARIES(GMLS_PYTHON PUBLIC GMLS_LIBRARIES)
    TARGET_LINK_LIBRARIES(GMLS_PYTHON PUBLIC ${Kokkos_LIBRARIES} ${KOKKOS_TPL_LIBRARIES} ${HWLOC_LIBRARIES} ${GSL_LIB} ${LAPACK_LIB})
    TARGET_LINK_LIBRARIES(GMLS_PYTHON PUBLIC ${Trilinos_LIBRARIES} ${Trilinos_TPL_LIBRARIES} ${GMLS_LIBRARIES})

    #IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    #  # these libraries need to be located for python 
    #  # (otherwise the wrong version is loaded)
    #  # worked it out for GNU (64-bit), but haven't seen this issue on mac

    #  EXECUTE_PROCESS(
    #  COMMAND "ldconfig" "-p"
    #  COMMAND "grep" "stdc++"
    #  OUTPUT_VARIABLE STDC_LIB
    #  OUTPUT_STRIP_TRAILING_WHITESPACE )
    #  STRING(REGEX REPLACE "(^[^\n\r]*x86-64\\) => )([^\n\r]*)(.*$)" "\\2" STDC_LIB ${STDC_LIB})

    #  EXECUTE_PROCESS(
    #  COMMAND "ldconfig" "-p"
    #  COMMAND "grep" "gomp"
    #  OUTPUT_VARIABLE GOMP_LIB
    #  OUTPUT_STRIP_TRAILING_WHITESPACE )
    #  STRING(REGEX REPLACE "(^[^\n\r]*x86-64\\) => )([^\n\r]*)(.*$)" "\\2" GOMP_LIB ${GOMP_LIB})

    #  TARGET_LINK_LIBRARIES(GMLS_PYTHON PUBLIC ${PYTHON_LIBRARY})
    #ENDIF()
    IF (APPLE)
      TARGET_LINK_LIBRARIES(GMLS_PYTHON PUBLIC ${PYTHON_LIBRARY})
    ENDIF()

    CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/__init__.py.in" "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py")
    
  ENDIF()
ENDIF()

